# NDK_DEMO

./: .gitignore  README.md
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/bsdiff/: CMakeLists.txt  bsdiff.c  bspatch.c
app/src/main/cpp/bsdiff/bzip2/: CMakeLists.txt  blocksort.c  bzip2.c  bzip2recover.c  bzlib.c  bzlib.h  bzlib_private.h  compress.c  crctable.c  decompress.c  huffman.c  randtable.c
app/src/main/cpp/giflib_5_1_1/: CMakeLists.txt
app/src/main/cpp/libyuv/: CMakeLists.txt
app/src/main/java/com/example/ndk/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
